Upload source code Odoo - Fixed path

--- a/addons/nhan_su/views/menu.xml
+++ b/addons/nhan_su/views/menu.xml
@@ -12,5 +12,11 @@
             sequence="1"
             action="action_nhan_vien"
         />
+        <menuitem name="Quản lý phòng ban" 
+            id="menu_phong_ban" 
+            parent="menu_root" 
+            sequence="2"
+            action="action_phong_ban"
+        />
     </data>
 </odoo>
